force-app/main/default/objects/Timeline__c/Timeline__c.object-meta.xml
<CustomObject>
    <label>ציר זמן</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>ציר זמן</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ציר זמן</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>