force-app/main/default/objects/Timeline__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <formula>IF(  ISPICKVAL(Reliability__c	, &quot;לא מאומת&quot;)   , IMAGE(&quot;/img/msg_icons/error32.png&quot;, &quot;&quot;, 30, 30),
IF( ISPICKVAL(Reliability__c	,&quot;מאומת&quot;) , IMAGE(&quot;/img/msg_icons/confirm32.png&quot;, &quot;&quot;, 30, 30), 
IF( ISPICKVAL(Reliability__c	,&quot;מהשטח&quot;) , IMAGE(&quot;/img/msg_icons/info32.png&quot;, &quot;&quot;, 30, 30), 
IMAGE( &quot;/img/msg_icons/warning32.png&quot;, &quot;&quot;, 30, 30)) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>צבע</label>
    <type>Text</type>
</CustomField>