force-app/main/default/objects/Timeline__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>זמן</label>
    <type>DateTime</type>
</CustomField>