force-app/main/default/objects/Timeline__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>אירוע</label>
    <referenceTo>Incident_Report__c</referenceTo>
    <relationshipLabel>ציר זמן</relationshipLabel>
    <relationshipName>Timeline</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>