force-app/main/default/objects/Timeline__c/fields/Reliability__c.field-meta.xml
<CustomField>
    <fullName>Reliability__c</fullName>
    <label>אמינות</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>לא מאומת</fullName>
                <color>#FF0000</color>
                <label>לא מאומת</label>
            </value>
            <value>
                <fullName>מאומת</fullName>
                <color>#33CC00</color>
                <label>מאומת</label>
            </value>
            <value>
                <fullName>מהשטח</fullName>
                <color>#F3D904</color>
                <label>מהשטח</label>
            </value>
            <value>
                <fullName>השערות</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>