force-app/main/default/objects/Timeline__c/fields/Update__c.field-meta.xml
<CustomField>
    <fullName>Update__c</fullName>
    <label>עדכון</label>
    <length>255</length>
    <type>Text</type>
</CustomField>